--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 distribute = False
 envlist =
     py3-dj-1.5.X,
+    py3-dj-1.6.X,
+    py3-dj-1.7.X,
+    dj-1.7.X,
+    dj-1.6.X,
     dj-1.5.X,
     dj-1.4.X,
     dj-1.3.X
@@ -15,11 +19,33 @@ deps =
     six
 
 
+[testenv:py3-dj-1.7.X]
+basepython = python3.2
+deps =
+    {[testenv]deps}
+    https://www.djangoproject.com/download/1.7c1/tarball/
+
+[testenv:py3-dj-1.6.X]
+basepython = python3.2
+deps =
+    {[testenv]deps}
+    Django>=1.6,<1.7
+
 [testenv:py3-dj-1.5.X]
 basepython = python3.2
 deps =
     {[testenv]deps}
     Django>=1.5,<1.6
+
+[testenv:dj-1.7.X]
+deps =
+    {[testenv]deps}
+    https://www.djangoproject.com/download/1.7c1/tarball/
+
+[testenv:dj-1.6.X]
+deps =
+    {[testenv]deps}
+    Django>=1.6,<1.7
 
 [testenv:dj-1.5.X]
 deps =
