--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist =
     py3-dj-1.7.X,
     py3-dj-1.8.X,
     py3-dj-1.9.X,
+    py3-dj-1.10.X,
+    dj-1.10.X,
     dj-1.9.X,
     dj-1.8.X,
     dj-1.7.X,
@@ -16,11 +18,17 @@ commands =
 deps =
 
 
+[testenv:py3-dj-1.10.X]
+basepython = python3.5
+deps =
+    {[testenv]deps}
+    Django>=1.10,<1.11
+
 [testenv:py3-dj-1.9.X]
 basepython = python3.5
 deps =
     {[testenv]deps}
-    Django>=1.8,<1.9
+    Django>=1.9,<1.10
 
 [testenv:py3-dj-1.8.X]
 basepython = python3.2
@@ -33,6 +41,11 @@ basepython = python3.2
 deps =
     {[testenv]deps}
     Django>=1.7,<1.8
+
+[testenv:dj-1.10.X]
+deps =
+    {[testenv]deps}
+    Django>=1.10,<1.11
 
 [testenv:dj-1.9.X]
 deps =
